@@ -4,6 +4,7 @@ OpenLDAP 2.4.21 Engineering
 	Fixed liblutil for negative microsecond offsets (ITS#6405)
 	Fixed slapd looping with SSL/TLS connections (ITS#6412)
 	Fixed slapd syncrepl freeing tasks from queue (ITS#6413)
+	Fixed slapd syncrepl parsing of tls defaults (ITS#6419)
 	Fixed slapd-config Adds with Abstract classes (ITS#6408)
 	Fixed slapd-ldif access outside database directory (ITS#6414)
 	Fixed slapo-translucent with back-null (ITS#6403)
